--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="app.js"></script>
+    <script src="app.js" defer></script>
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <h4>Valor a ser adicionado: <input id="soma" type="text" /></h4>
+    <button id="atualizar-saldo">Atualizar saldo</button>
+    <button id="limpar-saldo">Limpar seu saldo</button>
+    <h1>Seu saldo é: <span id="campo-saldo"></span></h1>
+  </body>
 </html>
